--- a/views/log_in_page.html
+++ b/views/log_in_page.html
@@ -60,12 +60,12 @@
                 <div class="form-row">
                     <div class="col-md-12" id = "dawg">
                         <label for="voters_card_id">Voters Card ID</label>
-                        <input type="text" class="form-control" id="validationDefault" placeholder="Voters Card ID"
+                        <input type="text" class="form-control" id="voters_card_id" placeholder="Voters Card ID"
                             value="" required>
                     </div>
                     <div class="col-md-12">
                         <label for="profile_password">Profile password</label>
-                        <input type="password" class="form-control" id="validationDefault" placeholder="Profile password"
+                        <input type="password" class="form-control" id="profile_password" placeholder="Profile password"
                             value="" required>
                     </div>
                 </div>
@@ -89,13 +89,18 @@
 
                 $.ajax({
                     url: "http://localhost:3000/candidates",
-                    method: "POST",
-                    data: {
-                        voters_card_id,
-                        profile_password
-                    },
+                    method: "GET",
+                    // data: {
+                    //     voters_card_id,
+                    //     profile_password
+                    // },
                 }).done(function (result) {
-                    console.log(result);
+                    if((result.voters_card_id === voters_card_id) && (result.profile_password === profile_password)){
+                        window.location.href = ""
+                    } else {
+                        alert()
+                        console.log('error');
+                    }
 
                 })
             });
