--- a/views/candidates.html
+++ b/views/candidates.html
@@ -18,7 +18,9 @@
     form {
       text-align: center;
       font-size: x-large;
-      font-family: serif
+      font-family: serif;
+      width: 500px;
+      margin: auto;
     }
 
     h1 {
@@ -27,9 +29,9 @@
       text-align: center
     }
 
-    .heading_reset {
+    #heading_reset {
       border-color: rgb(0, 119, 255);
-      border-width: 20px;
+      border-width: 70px;
       border-style: unset;
       border-radius: 150%;
       background-color: rgb(0, 255, 64);
@@ -47,101 +49,99 @@
   <nav class="navbar navbar-dark bg-dark">
     <button type="home_button"><a href="C:\Users\kunmie\Desktop\778\election_web\index.html">Home</a></button>
   </nav>
-  <div class="heading_reset">
-    <h1>INDEPENDENT ELECTORAL COMMISION</h1>
-  </div>
+  <h1 id="heading_reset">INDEPENDENT ELECTORAL COMMISION</h1>
 
   <h2>Register for the upcoming 2023 general elections</h2>
-  <div>
-    <form class="needs-validation" novalidate>
-      <div class="container">
-        <div class="form-row">
-          <div class="col-md-12">
-            <label for="first_name">First name</label>
-            <input type="text" class="form-control" id="first_name" placeholder="First name" value="" required>
-          </div><br>
-
-          <div class="col-md-12">
-            <label for="middle_name">Middle name</label>
-            <input type="text" class="form-control" id="middle_name" placeholder="Middle name" value="" required>
-          </div><br>
-
-          <div class="col-md-12">
-            <label for="last_name">Last name</label>
-            <input type="text" class="form-control" id="last_name" placeholder="Last name" value="" required>
-          </div>
-
-          <div class="col-md-12">
-            <label for="state_of_origin">Sate of origin</label>
-            <input type="text" class="form-control" id="state_of_origin" placeholder="State of Origin" value=""
-              required>
-          </div>
-          <div class="col-md-12">
-            <label for="local_govt_of_residence">Local govt of Residence</label>
-            <input type="text" class="form-control" id="local_govt_of_residence" placeholder="Local govt of Residence"
-              value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="date_of_birth">Date of Birth</label>
-            <input type="text" class="form-control" id="date_of_birth" placeholder="Date of Birth" value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" placeholder="Email" value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="voters_card_id">Voters Card ID</label>
-            <input type="text" class="form-control" id="voters_card_id" placeholder="Voters Card ID" value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="phone_No">Phone No</label>
-            <input type="text" class="form-control" id="phone_No" placeholder="Phone No" value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="residential_address">Residential Address</label>
-            <input type="text" class="form-control" id="residential_address" placeholder="Residential Address" value=""
-              required>
-          </div>
-          <div class="col-md-12">
-            <label for="political_party">Political Party</label>
-            <input type="text" class="form-control" id="political_party" placeholder="Political Party" value=""
-              required>
-          </div>
-          <div class="col-md-12">
-            <label for="party_id_number">Party id Number</label>
-            <input type="text" class="form-control" id="party_id_number" placeholder="party id number" value=""
-              required>
-          </div>
-          <div class="col-md-12">
-            <label for="position_contesting_for">Position Contesting For</label>
-            <input type="text" class="form-control" id="position_contesting_for"
-              placeholder="governor, house of reps,president" value="" required>
-          </div>
-          <div class="col-md-12">
-            <label for="profile_password">Profile password</label>
-            <input type="password" class="form-control" id="profile_password" placeholder="Profile password" value=""
-              required>
-          </div>
-        </div>
+  <form class="needs-validation" novalidate>
+    <div class="form-row">
+      <div class="col-md-4">
+        <label for="first_name">First name</label>
+        <input type="text" class="form-control" id="first_name" placeholder="First name" value="" required>
       </div>
-  </div>
-  </div>
 
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-      <label class="form-check-label" for="invalidCheck">
-        Agree to terms and conditions
-      </label>
-      <div class="invalid-feedback">
-        You must agree before submitting.
+      <div class="col-md-4">
+        <label for="middle_name">Middle name</label>
+        <input type="text" class="form-control" id="middle_name" placeholder="Middle name" value="" required>
+      </div>
+
+      <div class="col-md-4">
+        <label for="last_name">Last name</label>
+        <input type="text" class="form-control" id="last_name" placeholder="Last name" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="Gender">Gender</label>
+        <select name="gender" id="gender" class="form-control">
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
+      </div>
+
+      <div class="col-md-12">
+        <label for="state_of_origin">Sate of origin</label>
+        <input type="text" class="form-control" id="state_of_origin" placeholder="State of Origin" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="local_govt_of_residence">Local govt of Residence</label>
+        <input type="text" class="form-control" id="local_govt_of_residence" placeholder="Local govt of Residence"
+          value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="date_of_birth">Date of Birth</label>
+        <input type="text" class="form-control" id="date_of_birth" placeholder="Date of Birth" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" id="email" placeholder="Email" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="voters_card_id">Voters Card ID</label>
+        <input type="text" class="form-control" id="voters_card_id" placeholder="Voters Card ID" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="phone_No">Phone No</label>
+        <input type="text" class="form-control" id="phone_No" placeholder="Phone No" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="residential_address">Residential Address</label>
+        <input type="text" class="form-control" id="residential_address" placeholder="Residential Address" value=""
+          required>
+      </div>
+      <div class="col-md-12">
+        <label for="political_party">Political Party</label>
+        <input type="text" class="form-control" id="political_party" placeholder="Political Party" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="party_id_number">Party id Number</label>
+        <input type="text" class="form-control" id="party_id_number" placeholder="party id number" value="" required>
+      </div>
+      <div class="col-md-12">
+        <label for="position_contesting_for">Position Contesting For</label>
+        <input type="text" class="form-control" id="position_contesting_for"
+          placeholder="governor, house of reps,president" value="" required>
+      </div>
+      <div class="col-md-10 mb-3">
+        <label for="profile_password">Profile password</label>
+        <input type="password" class="form-control" id="profile_password" placeholder="Profile password" value=""
+          required>
       </div>
     </div>
-  </div>
-  <button class="btn btn-primary" type="submit">Submit form</button>
+
+    <div class="form-group">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+        <label class="form-check-label" for="invalidCheck">
+          Agree to terms and conditions
+        </label>
+        <div class="invalid-feedback">
+          You must agree before submitting.
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit form</button>
   </form>
 
   <script src="../js/jquery.js"></script>
+  <script>src = "C:\Users\kunmie\Desktop\778\election_web\js\bootstrap.min.js"</script>
   <script>
     $(document).ready(function () {
       $('form').on('submit', function (e) {
@@ -149,6 +149,7 @@
         var first_name = $('#first_name').val();
         var last_name = $('#last_name').val();
         var middle_name = $('#middle_name').val();
+        var gender = $('#gender').val();
         var state_of_origin = $('#state_of_origin').val();
         var local_govt_of_residence = $('#local_govt_of_residence').val();
         var residential_address = $('#residential_address').val();
@@ -168,6 +169,7 @@
             first_name,
             middle_name,
             last_name,
+            gender,
             state_of_origin,
             local_govt_of_residence,
             residential_address,
