--- a/views/log_in_page.html
+++ b/views/log_in_page.html
@@ -10,74 +10,70 @@
 </head>
 
 <body>
-     <style>
-    body {
-      background-image: url('../img/3387794.jpg')
-    }
+    <style>
+        body {
+            background-image: url('../img/3387794.jpg')
+        }
 
-    form {
-      text-align: center;
-      font-size: x-large;
-      font-family: serif
-    }
+        form {
+            text-align: center;
+            font-size: x-large;
+            font-family: serif;
+            width: 500px;
+            margin: auto;
+        }
 
-    h1 {
-      color: black;
-      font-family: fantasy;
-      text-align: center
-    }
+        h1 {
+            color: black;
+            font-family: fantasy;
+            text-align: center
+        }
 
-    .heading_reset {
-      border-color: rgb(0, 119, 255);
-      border-width: 20px;
-      border-style: unset;
-      border-radius: 150%;
-      background-color: rgb(0, 255, 64);
-    }
-    #sign_in{
-        text-align: center;
-    }
+        .heading_reset {
+            border-color: rgb(0, 119, 255);
+            border-width: 20px;
+            border-style: unset;
+            border-radius: 150%;
+            background-color: rgb(0, 255, 64);
+        }
 
-    h2 {
-      color: cornflowerblue;
-      text-align: center;
-      font-family: 'Franklin Gothic Medium';
-      text-size-adjust: 170px;
-      font-size: 150%;
+        h2 {
+            color: cornflowerblue;
+            text-align: center;
+            font-family: 'Franklin Gothic Medium';
+            text-size-adjust: 170px;
+            font-size: 150%;
 
-    }
-    #dawg {}
-
-  </style>
-  <nav class="navbar navbar-dark bg-dark">
+        }
+    </style>
+    <nav class="navbar navbar-dark bg-dark">
         <button type="home_button"><a href="C:\Users\kunmie\Desktop\778\election_web\index.html">Home</a></button>
     </nav>
     <div class="heading_reset">
         <h1>INDEPENDENT ELECTORAL COMMISION</h1>
     </div>
-        <form class="needs-validation" novalidate>
-            <div class="container">
-                <div class="form-row">
-                    <div class="col-md-12" id = "dawg">
-                        <label for="voters_card_id">Voters Card ID</label>
-                        <input type="text" class="form-control" id="voters_card_id" placeholder="Voters Card ID"
-                            value="" required>
-                    </div>
-                    <div class="col-md-12">
-                        <label for="profile_password">Profile password</label>
-                        <input type="password" class="form-control" id="profile_password" placeholder="Profile password"
-                            value="" required>
-                    </div>
+    <form class="needs-validation" novalidate>
+        <div class="container">
+            <div class="form-row">
+                <div class="col-md-12" id="dawg">
+                    <label for="voters_card_id">Voters Card ID</label>
+                    <input type="text" class="form-control" id="voters_card_id" placeholder="Voters Card ID" value=""
+                        required>
+                </div>
+                <div class="col-md-12">
+                    <label for="profile_password">Profile password</label>
+                    <input type="password" class="form-control" id="profile_password" placeholder="Profile password"
+                        value="" required>
                 </div>
             </div>
-    </div>
-    </div>
-    <div id="sign_in">
-    <button class="btn btn-primary" type="login" >Login</button>
-    </div>
+        </div>
+        </div>
+        </div>
+        <div id="sign_in">
+            <button class="btn btn-primary" type="login">Login</button>
+        </div>
 
     </form>
-    </div>
 
     <script src="../js/jquery.js"></script>
     <script>
@@ -95,8 +91,8 @@
                     //     profile_password
                     // },
                 }).done(function (result) {
-                    if((result.voters_card_id === voters_card_id) && (result.profile_password === profile_password)){
-                        window.location.href = ""
+                    if ((result.voters_card_id === voters_card_id) && (result.profile_password === profile_password)) {
+                        windows.location.href="/voting_page"
                     } else {
                         alert()
                         console.log('error');
