--- a/views/register.html
+++ b/views/register.html
@@ -18,7 +18,9 @@
     form {
       text-align: center;
       font-size: x-large;
-      font-family: serif
+      font-family: serif;
+      width: 500px;
+      margin: auto;
     }
 
     h1 {
@@ -27,7 +29,7 @@
       text-align: center
     }
 
-    .heading_reset {
+    #heading_reset {
       border-color: rgb(0, 119, 255);
       border-width: 20px;
       border-style: unset;
@@ -47,9 +49,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <button type="home_button"><a href="C:\Users\kunmie\Desktop\778\election_web\index.html">Home</a></button>
   </nav>
-  <div class="heading_reset">
-    <h1>INDEPENDENT ELECTORAL COMMISION</h1>
-  </div>
+  <h1 id="heading_reset">INDEPENDENT ELECTORAL COMMISION</h1>
 
   <h2>Register for the upcoming 2023 general elections</h2>
   <form class="needs-validation" novalidate>
@@ -67,6 +67,14 @@
       <div class="col-md-4 mb-3">
         <label for="last_name">Last name</label>
         <input type="text" class="form-control" id="last_name" placeholder="Last name" value="" required>
+      </div>
+
+      <div class="col-md-12">
+        <label for="Gender">Gender</label>
+        <select name="gender" id="gender" class="form-control">
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
       </div>
 
       <div class="col-md-4 mb-3">
@@ -94,18 +102,16 @@
         <label for="phone_No">Phone No</label>
         <input type="text" class="form-control" id="phone_No" placeholder="Phone No" value="" required>
       </div>
-      <div class="col-md-4 mb-3">
+      <div class="col-md-12 mb-3">
         <label for="residential_address">Residential Address</label>
         <input type="text" class="form-control" id="residential_address" placeholder="Residential Address" value=""
           required>
       </div>
       <div class="col-md-12">
         <label for="profile_password">Profile password</label>
-        <input type="password" class="form-control" id="profile_password" placeholder="Profile password" value="" required>
+        <input type="password" class="form-control" id="profile_password" placeholder="Profile password" value=""
+          required>
       </div>
-    </div>
-    </div>
-    </div>
     </div>
 
     <div class="form-group">
@@ -130,6 +136,7 @@
         var first_name = $('#first_name').val();
         var last_name = $('#last_name').val();
         var middle_name = $('#middle_name').val();
+        var gender = $('#gender').val();
         var state_of_origin = $('#state_of_origin').val();
         var local_govt_of_residence = $('#local_govt_of_residence').val();
         var residential_address = $('#residential_address').val();
@@ -141,7 +148,7 @@
         $.ajax({
           method: 'POST',
           url: 'http://localhost:3000/details',
-          data: { first_name, middle_name, last_name, state_of_origin, local_govt_of_residence, residential_address, date_of_birth, email, phone_No, voters_card_id, profile_password },
+          data: { first_name, middle_name, last_name, gender, state_of_origin, local_govt_of_residence, residential_address, date_of_birth, email, phone_No, voters_card_id, profile_password },
           success: function (result) {
             console.log(result);
           },
