--- a/views/voting_page.html
+++ b/views/voting_page.html
@@ -123,7 +123,7 @@
               </div>
               <button class="btn btn-primary" type="submit">Submit votes</button>
             </form>
-    </form>
+    <!-- </form> -->
     <script src="../js/jquery.js"></script>
     <script>
         $(document).ready(function () {
