--- a/views/register.html
+++ b/views/register.html
@@ -150,6 +150,7 @@
           url: 'http://localhost:3000/details',
           data: { first_name, middle_name, last_name, gender, state_of_origin, local_govt_of_residence, residential_address, date_of_birth, email, phone_No, voters_card_id, profile_password },
           success: function (result) {
+            alert ("Registration Successful")
             console.log(result);
           },
 
