--- a/views/voting_page.html
+++ b/views/voting_page.html
@@ -84,55 +84,33 @@
                     <option value="apga">APGA</option>
                 </select>
             </div>
-            <div class="col-md-12">
-                <label for="office">National House of Assembly</label>
-                <select name="office" id="national_house_of_assembly" class="form-control">
-                    <option value="party">Select...party</option>
-                    <option value="pdp">PDP</option>
-                    <option value="apc">APC</option>
-                    <option value="sdp">SDP</option>
-                    <option value="anpp">ANPP</option>
-                    <option value="apga">APGA</option>
-                </select>
-            </div>
-            <div class="col-md-12">
-                <label for="office">House of Representatives</label>
-                <select name="office" id="house_of_representatives" class="form-control">
-                    <option value="party">Select...party</option>
-                    <option value="pdp">PDP</option>
-                    <option value="apc">APC</option>
-                    <option value="sdp">SDP</option>
-                    <option value="anpp">ANPP</option>
-                    <option value="apga">APGA</option>
-                </select>
-            </div>
 
 
 
         </div>
         <div class="form-group">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                  <label class="form-check-label" for="invalidCheck">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                <label class="form-check-label" for="invalidCheck">
                     Confirm that all votes have been cast
-                  </label>
-                  <div class="invalid-feedback">
+                </label>
+                <div class="invalid-feedback">
                     You must agree before submitting.
-                  </div>
                 </div>
-              </div>
-              <button class="btn btn-primary" type="submit">Submit votes</button>
-            </form>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Submit votes</button>
+    </form>
     <!-- </form> -->
     <script src="../js/jquery.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
             $('form').on('submit', function (e) {
                 e.preventDefault();
                 var president = $('#president').val();
                 var governor = $('#governor').val();
-                var national_house_of_assembly = $('#national_house_of_assembly').val();
-                var house_of_representatives = $('#house_of_representatives').val();
+                
 
                 $.ajax({
                     url: "http://localhost:3000/office_voted_party",
@@ -140,8 +118,7 @@
                     data: {
                         president,
                         governor,
-                        national_house_of_assembly,
-                        house_of_representatives
+                        
                     },
                 }).done(function (result) {
                     console.log(result);
